--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <li>
           <div>
             <h3>Leite Ninho</h3>
-            <p>Massa de chocolate, cobertura de leite ninho.</p>
+            <p>Massa de chocolate, recheio de leite ninho.</p>
           </div>
 
           <strong class="price"> R$10,00 </strong>
@@ -114,7 +114,7 @@
             <p>Massa de chocolate, cobertura de brigadeiro.</p>
           </div>
 
-          <strong class="price"> R$40,00 </strong>
+          <strong class="price"> R$45,00 </strong>
         </li>
 
         <li>
@@ -123,7 +123,7 @@
             <p>Massa de chocolate, cobertura leite ninho.</p>
           </div>
 
-          <strong class="price"> R$40,00 </strong>
+          <strong class="price"> R$45,00 </strong>
         </li>
       </ul>
     </section>
